# glesv2_points

./: .gitignore  CMakeLists.txt  README.md
include/: linear.h  types.h
src/: linear.c  main.c
src/eglut/: eglut.c  eglut_wayland.c  eglut_x11.c
